tests/ui/g-route-policy-required.stderr
error[E0080]: evaluation panicked: g::route arms must begin with a controller self-send
 --> src/g.rs
  |
  |     let _ = const { validate_choreography::<Steps>() };
  |                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `hibana::g::project::<0, hibana::g::Route<hibana::g::Send<0, 1, hibana::g::Msg<3, ()>>, hibana::g::Send<0, 1, hibana::g::Msg<4, ()>>>>::{constant#0}` failed inside this call
  |
note: inside `g::validate_choreography::<Route<hibana::g::Send<0, 1, Msg<3, ()>>, hibana::g::Send<0, 1, Msg<4, ()>>>>`
 --> src/g.rs
  |
  |         panic_choreography_error(error);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `g::panic_choreography_error`
 --> $RUST/core/src/panic.rs
  |
  = note: the failure occurred here
  |
 ::: src/g.rs
  |
  |         0 => panic!("g::route arms must begin with a controller self-send"),
  |              -------------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  |     let _ = const { validate_choreography::<Steps>() };
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

note: the above error was encountered while instantiating `fn g::project::<0, Route<hibana::g::Send<0, 1, Msg<3, ()>>, hibana::g::Send<0, 1, Msg<4, ()>>>>`
 --> src/global/program.rs
  |
  |         crate::g::project(self)
  |         ^^^^^^^^^^^^^^^^^^^^^^^
